--- a/areej.html
+++ b/areej.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>message for you</title>
+    <title>Hi wifey!</title>
 </head>
 
 <body>
@@ -101,7 +101,7 @@
 
     y = d.getFullYear()
     yesBtn.addEventListener("click", () => {
-        question.innerHTML = "Yay," + (10 - n).toString() + " months to go. InshaAllah. I can't wait to spend every moment with you, making memories and building our beautiful life together.";
+        question.innerHTML = "Yay, " + (10 - n).toString() + " months to go. InshaAllah. I can't wait to spend every moment with you, making memories and building our beautiful life together.";
         gif.src =
             "https://i.pinimg.com/originals/63/19/6c/63196c4cf7704c98de6c59defd498862.gif";
     });
